--- a/README
+++ b/README
@@ -1,2 +1,4 @@
 implementation of mutual information in R, just to understand how it works and
 whether it's a good match for the use case we have in mind.
+
+This project is now obsolete.
